test/tests/stages/14_pointers/valid/declarators/declare_pointer_in_for_loop.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CSingleInit: 
                      CAddrOf: 
                        CVar: 
                          TIdentifier: x
                          None: 
                        None: 
                      None: 
                    Pointer: 
                      Int: 
                    None: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CDereference: 
                              CVar: 
                                TIdentifier: i
                                None: 
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 5
                              None: 
                            None: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: i
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                            None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
